[package]
name = "iyes_loopless"
version = "0.5.0"
description = "Composable alternatives to Bevy's States/FixedTimestep/RunCriteria"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/IyesGames/iyes_loopless"
keywords = ["gamedev", "bevy"]
categories = ["game-engines"]
exclude = ["assets"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "fixedtimestep", "states", "bevy-compat", "app" ]
fixedtimestep = [
    "bevy_core",
]
states = [
    "bevy_utils",
]
# provide adapters for Bevy APIs, like the `.run_in_bevy_state` RC
bevy-compat = []
# provide extension traits with convenient App builder methods
app = [
    "bevy_app",
]

[dependencies]
bevy_ecs = "0.7.0"
bevy_app = { version = "0.7.0", optional = true }
bevy_core = { version = "0.7.0", optional = true }
bevy_utils = { version = "0.7.0", optional = true }

[dev-dependencies]
bevy = "0.7.0"
rand = "0.8.5"
