[package]
name = "iyes_loopless"
version = "0.6.1"
description = "Composable alternatives to Bevy's States/FixedTimestep/RunCriteria"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/IyesGames/iyes_loopless"
keywords = ["gamedev", "bevy"]
categories = ["game-engines"]
exclude = ["assets"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "fixedtimestep", "states", "bevy-compat", "app" ]
fixedtimestep = [
    "bevy_time",
]
states = [
    "bevy_utils",
]
# provide adapters for Bevy APIs, like the `.run_in_bevy_state` RC
bevy-compat = []
# provide extension traits with convenient App builder methods
app = [
    "bevy_app",
]

[dependencies]
bevy_ecs = { git = "https://github.com/bevyengine/bevy" }
bevy_app = { git = "https://github.com/bevyengine/bevy", optional = true }
bevy_time = { git = "https://github.com/bevyengine/bevy", optional = true }
bevy_utils = { git = "https://github.com/bevyengine/bevy", optional = true }

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy" }
rand = "0.8.5"
